--- a/integration.html
+++ b/integration.html
@@ -8,7 +8,7 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<title>Trajano - Project Dependencies</title>
+		<title>Trajano - Continuous Integration</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
@@ -45,7 +45,7 @@
 		</script>
 		</head>
 
-	<body class="page-dependencies project-trajano" data-spy="scroll" data-offset="60" data-target="#toc-scroll-target">
+	<body class="page-integration project-trajano" data-spy="scroll" data-offset="60" data-target="#toc-scroll-target">
 
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner">
@@ -75,14 +75,14 @@
 											<li><a href="index.html" title="About">About </a></li>
 											<li><a href="project-summary.html" title="Project Summary">Project Summary </a></li>
 											<li><a href="team-list.html" title="Project Team">Project Team </a></li>
-											<li class="active"><a href="" title="Dependencies">Dependencies </a></li>
+											<li><a href="dependencies.html" title="Dependencies">Dependencies </a></li>
 											<li><a href="plugins.html" title="Project Plugins">Project Plugins </a></li>
 											<li><a href="plugin-management.html" title="Plugin Management">Plugin Management </a></li>
 											<li><a href="distribution-management.html" title="Distribution Management">Distribution Management </a></li>
 											<li><a href="issue-tracking.html" title="Issue Tracking">Issue Tracking </a></li>
 											<li><a href="license.html" title="Project License">Project License </a></li>
 											<li><a href="source-repository.html" title="Source Repository">Source Repository </a></li>
-											<li><a href="integration.html" title="Continuous Integration">Continuous Integration </a></li>
+											<li class="active"><a href="" title="Continuous Integration">Continuous Integration </a></li>
 										</ul>
 									</li>
 									<li class="dropdown-submenu">
@@ -127,12 +127,25 @@
 	<div class="row">
 		<div class="span12">
 			<div class="body-content">
-<a name="Project_Dependencies"></a> 
 <div class="section"> 
  <div class="page-header">
-  <h2 id="Project_Dependencies">Project Dependencies</h2>
+  <h2 id="Overview">Overview</h2>
  </div> 
- <p>There are no dependencies for this project. It is a standalone application that does not depend on any other project.</p> 
+ <a name="Overview"></a> 
+ <p>This project uses Continuous Integration System.</p> 
+</div> 
+<div class="section"> 
+ <h2 id="Access">Access</h2> 
+ <a name="Access"></a> 
+ <p>The following is a link to the continuous integration system used by the project.</p> 
+ <div class="source"> 
+  <pre><a class="externalLink" href="http://drone.io/github.com/trajano/trajano">http://drone.io/github.com/trajano/trajano</a></pre> 
+ </div> 
+</div> 
+<div class="section"> 
+ <h2 id="Notifiers">Notifiers</h2> 
+ <a name="Notifiers"></a> 
+ <p>No notifiers are defined. Please check back at a later date.</p> 
 </div>
 			</div>
 		</div>
@@ -161,8 +174,8 @@
 						<li>
 							<a href="team-list.html" title="Project Team">Project Team </a>
 						</li>
-						<li class="active">
-							<a href="#" title="Dependencies">Dependencies </a>
+						<li>
+							<a href="dependencies.html" title="Dependencies">Dependencies </a>
 						</li>
 						<li>
 							<a href="plugins.html" title="Project Plugins">Project Plugins </a>
@@ -182,8 +195,8 @@
 						<li>
 							<a href="source-repository.html" title="Source Repository">Source Repository </a>
 						</li>
-						<li>
-							<a href="integration.html" title="Continuous Integration">Continuous Integration </a>
+						<li class="active">
+							<a href="#" title="Continuous Integration">Continuous Integration </a>
 						</li>
 							</ul>
 						</li>
