--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -61,9 +61,9 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Organizational projects <b class="caret"></b></a>
 								<ul class="dropdown-menu">
-									<li><a href="coding-standards" title="Coding standards">Coding standards </a></li>
-									<li><a href="commons-testing" title="Commons testing">Commons testing </a></li>
-									<li><a href="java-archetype" title="Java archetype">Java archetype </a></li>
+									<li><a href="../coding-standards" title="Coding standards">Coding standards </a></li>
+									<li><a href="../commons-testing" title="Commons testing">Commons testing </a></li>
+									<li><a href="../java-archetype" title="Java archetype">Java archetype </a></li>
 								</ul>
 							</li>
 							<li class="dropdown active">
@@ -82,6 +82,7 @@
 											<li><a href="issue-tracking.html" title="Issue Tracking">Issue Tracking </a></li>
 											<li><a href="license.html" title="Project License">Project License </a></li>
 											<li><a href="source-repository.html" title="Source Repository">Source Repository </a></li>
+											<li><a href="integration.html" title="Continuous Integration">Continuous Integration </a></li>
 										</ul>
 									</li>
 									<li class="dropdown-submenu">
