--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -142,7 +142,7 @@
    <tr class="a"> 
     <td><i class="icon-ok"></i></td> 
     <td># of plugins using the latest version available</td> 
-    <td>9</td> 
+    <td>10</td> 
    </tr> 
    <tr class="b"> 
     <td><i class="icon-warning-sign"></i></td> 
@@ -152,7 +152,7 @@
    <tr class="a"> 
     <td><i class="icon-warning-sign"></i></td> 
     <td># of plugins where the next version available is an incremental version update</td> 
-    <td>1</td> 
+    <td>0</td> 
    </tr> 
    <tr class="b"> 
     <td><i class="icon-warning-sign"></i></td> 
@@ -279,12 +279,12 @@
      <td><i class="icon-ok"></i></td> 
     </tr> 
     <tr class="a"> 
-     <td><i class="icon-warning-sign"></i></td> 
+     <td><i class="icon-ok"></i></td> 
      <td>org.apache.maven.plugins</td> 
      <td>maven-release-plugin</td> 
-     <td>2.4.1</td> 
-     <td></td> 
      <td><b>2.4.2</b></td> 
+     <td></td> 
+     <td></td> 
      <td></td> 
      <td></td> 
      <td><i class="icon-ok"></i></td> 
@@ -543,15 +543,9 @@
   <h3 id="Plugin_org.apache.maven.plugins:maven-release-plugin">Plugin org.apache.maven.plugins:maven-release-plugin</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
-    <tr class="a"> 
-     <th width="80%">Newer versions</th> 
-     <td><b>2.4.2</b>&nbsp;<i>Next Incremental</i></td> 
-    </tr> 
-   </thead> 
-   <thead> 
     <tr class="b"> 
      <th width="80%">Current Version</th> 
-     <td>2.4.1</td> 
+     <td>2.4.2</td> 
     </tr> 
    </thead> 
    <thead> 
@@ -569,7 +563,7 @@
    <thead> 
     <tr class="a"> 
      <th width="80%">Status</th> 
-     <td><i class="icon-warning-sign"></i>&nbsp;There is at least one newer incremental version available. Incremental updates are typically passive.</td> 
+     <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
     </tr> 
    </thead> 
    <tbody> 
