--- a/project-summary.html
+++ b/project-summary.html
@@ -121,7 +121,7 @@
 	</div>
 		<div>
 			<ul class="breadcrumb">
-				<li class="projectVersion version-date">Version: 6-SNAPSHOT</li>
+				<li class="projectVersion version-date">Version: 6</li>
 				<li class="divider">|</li>
 				<li class="publishDate version-date">Last Published: 2014-03-02</li>
 			</ul>
@@ -206,7 +206,7 @@
     </tr> 
     <tr class="b"> 
      <td>Version</td> 
-     <td>6-SNAPSHOT</td> 
+     <td>6</td> 
     </tr> 
     <tr class="a"> 
      <td>Type</td> 
