wagon-git commit

--- a/dependency-info.html
+++ b/dependency-info.html
@@ -8,7 +8,7 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<title>Trajano - Project Dependencies</title>
+		<title>Trajano - Dependency Information</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
@@ -47,7 +47,7 @@
 		</script>
 		</head>
 
-	<body class="page-dependencies project-trajano" data-spy="scroll" data-offset="60" data-target="#toc-scroll-target">
+	<body class="page-dependency-info project-trajano" data-spy="scroll" data-offset="60" data-target="#toc-scroll-target">
 
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner">
@@ -77,7 +77,7 @@
 											<li ><a href="index.html" title="About">About</a></li>
 											<li ><a href="plugin-management.html" title="Plugin Management">Plugin Management</a></li>
 											<li ><a href="distribution-management.html" title="Distribution Management">Distribution Management</a></li>
-											<li ><a href="dependency-info.html" title="Dependency Information">Dependency Information</a></li>
+											<li class="active"><a href="" title="Dependency Information">Dependency Information</a></li>
 											<li ><a href="source-repository.html" title="Source Repository">Source Repository</a></li>
 											<li ><a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a></li>
 											<li ><a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a></li>
@@ -86,7 +86,7 @@
 											<li ><a href="license.html" title="Project License">Project License</a></li>
 											<li ><a href="team-list.html" title="Project Team">Project Team</a></li>
 											<li ><a href="project-summary.html" title="Project Summary">Project Summary</a></li>
-											<li class="active"><a href="" title="Dependencies">Dependencies</a></li>
+											<li ><a href="dependencies.html" title="Dependencies">Dependencies</a></li>
 										</ul>
 									</li>
 									<li class="dropdown-submenu ">
@@ -134,12 +134,69 @@
 	<div class="row">
 		<div class="span12">
 			<div class="body-content">
-<a name="Project_Dependencies"></a> 
 <div class="section"> 
  <div class="page-header">
-  <h2 id="Project_Dependencies">Project Dependencies</h2>
+  <h2 id="Dependency_Information">Dependency Information</h2>
  </div> 
- <p>There are no dependencies for this project. It is a standalone application that does not depend on any other project.</p> 
+ <a name="Dependency_Information"></a> 
+ <div class="section"> 
+  <h3 id="Apache_Maven">Apache Maven</h3> 
+  <a name="Apache_Maven"></a> 
+  <div class="source"> 
+   <pre>&lt;dependency&gt;
+  &lt;groupId&gt;net.trajano&lt;/groupId&gt;
+  &lt;artifactId&gt;trajano&lt;/artifactId&gt;
+  &lt;version&gt;7-SNAPSHOT&lt;/version&gt;
+  &lt;type&gt;pom&lt;/type&gt;
+&lt;/dependency&gt;</pre> 
+  </div> 
+ </div> 
+ <div class="section"> 
+  <h3 id="Apache_Buildr">Apache Buildr</h3> 
+  <a name="Apache_Buildr"></a> 
+  <div class="source"> 
+   <pre>'net.trajano:trajano:pom:7-SNAPSHOT'</pre> 
+  </div> 
+ </div> 
+ <div class="section"> 
+  <h3 id="Apache_Ant">Apache Ant</h3> 
+  <a name="Apache_Ant"></a> 
+  <div class="source"> 
+   <pre>&lt;dependency org=&quot;net.trajano&quot; name=&quot;trajano&quot; rev=&quot;7-SNAPSHOT&quot;&gt;
+  &lt;artifact name=&quot;trajano&quot; type=&quot;pom&quot; /&gt;
+&lt;/dependency&gt;</pre> 
+  </div> 
+ </div> 
+ <div class="section"> 
+  <h3 id="Groovy_Grape">Groovy Grape</h3> 
+  <a name="Groovy_Grape"></a> 
+  <div class="source"> 
+   <pre>@Grapes(
+@Grab(group='net.trajano', module='trajano', version='7-SNAPSHOT')
+)</pre> 
+  </div> 
+ </div> 
+ <div class="section"> 
+  <h3 id="Grails">Grails</h3> 
+  <a name="Grails"></a> 
+  <div class="source"> 
+   <pre>compile 'net.trajano:trajano:7-SNAPSHOT'</pre> 
+  </div> 
+ </div> 
+ <div class="section"> 
+  <h3 id="Leiningen">Leiningen</h3> 
+  <a name="Leiningen"></a> 
+  <div class="source"> 
+   <pre>[net.trajano/trajano &quot;7-SNAPSHOT&quot;]</pre> 
+  </div> 
+ </div> 
+ <div class="section"> 
+  <h3 id="SBT">SBT</h3> 
+  <a name="SBT"></a> 
+  <div class="source"> 
+   <pre>libraryDependencies += &quot;net.trajano&quot; %% &quot;trajano&quot; % &quot;7-SNAPSHOT&quot;</pre> 
+  </div> 
+ </div> 
 </div>
 			</div>
 		</div>
@@ -156,7 +213,7 @@
 				<div class="span3 bottom-nav">
 					<ul class="nav nav-list">
 						<li class="nav-header">Project Documentation</li>
-						<li class="active">
+						<li >
 							<a href="project-info.html" title="Project Information">Project Information <i class="icon-chevron-down"></i></a>
 							<ul class="nav nav-list">
 						<li >
@@ -168,8 +225,8 @@
 						<li >
 							<a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
 						</li>
-						<li >
-							<a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
+						<li class="active">
+							<a href="#" title="Dependency Information">Dependency Information</a>
 						</li>
 						<li >
 							<a href="source-repository.html" title="Source Repository">Source Repository</a>
@@ -195,8 +252,8 @@
 						<li >
 							<a href="project-summary.html" title="Project Summary">Project Summary</a>
 						</li>
-						<li class="active">
-							<a href="#" title="Dependencies">Dependencies</a>
+						<li >
+							<a href="dependencies.html" title="Dependencies">Dependencies</a>
 						</li>
 							</ul>
 						</li>
