--- a/mail-lists.html
+++ b/mail-lists.html
@@ -8,7 +8,7 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<title>Trajano - Project Dependencies</title>
+		<title>Trajano - Project Mailing Lists</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
@@ -47,7 +47,7 @@
 		</script>
 		</head>
 
-	<body class="page-dependencies project-trajano" data-spy="scroll" data-offset="60" data-target="#toc-scroll-target">
+	<body class="page-mail-lists project-trajano" data-spy="scroll" data-offset="60" data-target="#toc-scroll-target">
 
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner">
@@ -79,14 +79,14 @@
 											<li ><a href="distribution-management.html" title="Distribution Management">Distribution Management</a></li>
 											<li ><a href="dependency-info.html" title="Dependency Information">Dependency Information</a></li>
 											<li ><a href="source-repository.html" title="Source Repository">Source Repository</a></li>
-											<li ><a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a></li>
+											<li class="active"><a href="" title="Mailing Lists">Mailing Lists</a></li>
 											<li ><a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a></li>
 											<li ><a href="integration.html" title="Continuous Integration">Continuous Integration</a></li>
 											<li ><a href="plugins.html" title="Project Plugins">Project Plugins</a></li>
 											<li ><a href="license.html" title="Project License">Project License</a></li>
 											<li ><a href="team-list.html" title="Project Team">Project Team</a></li>
 											<li ><a href="project-summary.html" title="Project Summary">Project Summary</a></li>
-											<li class="active"><a href="" title="Dependencies">Dependencies</a></li>
+											<li ><a href="dependencies.html" title="Dependencies">Dependencies</a></li>
 										</ul>
 									</li>
 									<li class="dropdown-submenu ">
@@ -134,12 +134,12 @@
 	<div class="row">
 		<div class="span12">
 			<div class="body-content">
-<a name="Project_Dependencies"></a> 
 <div class="section"> 
  <div class="page-header">
-  <h2 id="Project_Dependencies">Project Dependencies</h2>
+  <h2 id="Project_Mailing_Lists">Project Mailing Lists</h2>
  </div> 
- <p>There are no dependencies for this project. It is a standalone application that does not depend on any other project.</p> 
+ <a name="Project_Mailing_Lists"></a> 
+ <p>There are no mailing lists currently associated with this project.</p> 
 </div>
 			</div>
 		</div>
@@ -156,7 +156,7 @@
 				<div class="span3 bottom-nav">
 					<ul class="nav nav-list">
 						<li class="nav-header">Project Documentation</li>
-						<li class="active">
+						<li >
 							<a href="project-info.html" title="Project Information">Project Information <i class="icon-chevron-down"></i></a>
 							<ul class="nav nav-list">
 						<li >
@@ -174,8 +174,8 @@
 						<li >
 							<a href="source-repository.html" title="Source Repository">Source Repository</a>
 						</li>
-						<li >
-							<a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
+						<li class="active">
+							<a href="#" title="Mailing Lists">Mailing Lists</a>
 						</li>
 						<li >
 							<a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a>
@@ -195,8 +195,8 @@
 						<li >
 							<a href="project-summary.html" title="Project Summary">Project Summary</a>
 						</li>
-						<li class="active">
-							<a href="#" title="Dependencies">Dependencies</a>
+						<li >
+							<a href="dependencies.html" title="Dependencies">Dependencies</a>
 						</li>
 							</ul>
 						</li>
