--- a/mail-lists.html
+++ b/mail-lists.html
@@ -52,6 +52,9 @@
       <li class="menu-item menu-item-type-post_type menu-item-object-page page_item">
                     <a href="http://site.trajano.net/java-archetype/" class="externalLink" title="Java archetype">Java archetype</a>
       </li>
+      <li class="menu-item menu-item-type-post_type menu-item-object-page page_item">
+                    <a href="http://www.trajano.net/open-source-projects/" class="externalLink" title="Other projects">Other projects</a>
+      </li>
             </ul>
         </nav>
       </div>
