wagon-git commit

--- a/project-reports.html
+++ b/project-reports.html
@@ -99,19 +99,11 @@
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
                                                                                                                                                                                                                                                                                             <li class="collapsed">
-                          <a href="project-info.html" title="Project Information">Project Information</a>
+                          <a href="/project-info.html" title="Project Information">Project Information</a>
                   </li>
-                                                                                          <li class="expanded">
-            <strong>Project Reports</strong>
-                  <ul>
-                      <li class="none">
-                          <a href="dependency-updates-report.html" title="Dependency Updates Report">Dependency Updates Report</a>
-            </li>
-                      <li class="none">
-                          <a href="plugin-updates-report.html" title="Plugin Updates Report">Plugin Updates Report</a>
-            </li>
-              </ul>
-        </li>
+                                                                                      <li class="collapsed">
+                          <a href="/project-reports.html" title="Project Reports">Project Reports</a>
+                  </li>
           </ul>
         </aside>
           </div>
