--- a/license.html
+++ b/license.html
@@ -323,7 +323,7 @@ rights to a jury trial in any resulting litigation.</p>
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
                                                                                                                                                                                                                                                                                                       <li class="expanded">
-                          <a href="project-info.html" title="Project Information">Project Information</a>
+                          <a href="/project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
                           <a href="index.html" title="About">About</a>
@@ -367,7 +367,7 @@ rights to a jury trial in any resulting litigation.</p>
               </ul>
         </li>
                                                                                       <li class="collapsed">
-                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
+                          <a href="/project-reports.html" title="Project Reports">Project Reports</a>
                   </li>
           </ul>
         </aside>
