wagon-git commit

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <p>The organizational POM version numbering scheme is a single numeric number. This is similar to the way <a class="externalLink" href="http://apache.org/">Apache</a> does their POM versioning.</p></div>
 <div class="section">
 <h2>Using SNAPSHOT releases<a name="Using_SNAPSHOT_releases"></a></h2>
-<p>The [Sonatype OSS][] is used to host the SNAPSHOT releases. To use the SNAPSHOT releases, add the following <tt>&lt;profile&gt;</tt> in the <tt>.m2/settings.xml</tt> file.</p>
+<p>The <a class="externalLink" href="http://oss.sonatype.org/">Sonatype OSS</a> is used to host the SNAPSHOT releases. To use the SNAPSHOT releases, add the following <tt>&lt;profile&gt;</tt> in the <tt>.m2/settings.xml</tt> file.</p>
 
 <div class="source">
 <pre>&lt;profile&gt;
