wagon-git commit

--- a/project-summary.html
+++ b/project-summary.html
@@ -128,6 +128,17 @@
       	</h2>
         <div id="primary-sidebar" class="primary-sidebar widget-area" role="complementary">
                 <aside class="widget">
+                 <h1 class="widget-title">Overview</h1>
+                  <ul>
+                  <li class="none">
+                          <a href="index.html" title="About">About</a>
+            </li>
+                  <li class="none">
+                          <a href="services.html" title="Services used">Services used</a>
+            </li>
+          </ul>
+        </aside>
+      <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
                                                                                                                                                                                                                                                                                                       <li class="expanded">
