--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
       	</h2>
         <div id="primary-sidebar" class="primary-sidebar widget-area" role="complementary">
                 <aside class="widget">
+                 <h1 class="widget-title">Overview</h1>
+                  <ul>
+                  <li class="none">
+            <strong>About</strong>
+          </li>
+                  <li class="none">
+                          <a href="services.html" title="Services used">Services used</a>
+            </li>
+          </ul>
+        </aside>
+      <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
                                                                                                                                                                                                                                                                                                       <li class="expanded">
