--- a/services.html
+++ b/services.html
@@ -104,6 +104,17 @@
       	</h2>
         <div id="primary-sidebar" class="primary-sidebar widget-area" role="complementary">
                 <aside class="widget">
+                 <h1 class="widget-title">Overview</h1>
+                  <ul>
+                  <li class="none">
+                          <a href="index.html" title="About">About</a>
+            </li>
+                  <li class="none">
+            <strong>Services used</strong>
+          </li>
+          </ul>
+        </aside>
+      <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
                                                                                                                                                                                                                                                                                             <li class="collapsed">
