wagon-git commit

--- a/services.html
+++ b/services.html
@@ -71,12 +71,12 @@
 <ul>
   
 <li>
-<p><a class="externalLink" href="http://github.com/">GitHub</a> is used for [issue tracking][] as they already provide the  [source repository][]. However, <a class="externalLink" href="http://www.redmine.org/">Redmine</a> with <a class="externalLink" href="http://www.redminebacklogs.net/">Redmine Backlogs</a> is  used internally within the organization.</p></li>
+<p><a class="externalLink" href="http://github.com/">GitHub</a> is used for <a href="./issue-tracking.html">issue tracking</a> as they already provide the  <a href="./source-repository.html">source repository</a>. However, <a class="externalLink" href="http://www.redmine.org/">Redmine</a> with <a class="externalLink" href="http://www.redminebacklogs.net/">Redmine Backlogs</a> is  used internally within the organization.</p></li>
   
 <li>
 <p><a class="externalLink" href="http://drone.io/">Drone</a> is used for [continuous integration][] builds as it integrates  well with <a class="externalLink" href="http://github.com/">GitHub</a>. However, <a class="externalLink" href="http://jenkins-ci.org/">Jenkins</a> is used internally within the  organization.</p></li>
 </ul>
-<p>The following on-line services are used for [distribution management][].</p>
+<p>The following on-line services are used for <a href="./distribution-management.html">distribution management</a>.</p>
 
 <ul>
   
