wagon-git commit

--- a/dependency-convergence.html
+++ b/dependency-convergence.html
@@ -245,8 +245,11 @@
 <li><a class="externalLink" href="http://site.trajano.net/app/app-web">net.trajano.app:app-web</a></li>
 <li><a class="externalLink" href="http://site.trajano.net/app/app-ws">net.trajano.app:app-ws</a></li>
 <li><a class="externalLink" href="http://site.trajano.net/app">net.trajano.app:app</a></li>
+<li><a class="externalLink" href="http://site.trajano.net/java-archetype/">net.trajano.archetype:java-archetype</a></li>
 <li><a class="externalLink" href="http://site.trajano.net/batik-maven-plugin/batik-maven-plugin/">net.trajano.mojo:batik-maven-plugin</a></li>
 <li><a class="externalLink" href="http://site.trajano.net/cleanpom-maven-plugin/cleanpom-maven-plugin/">net.trajano.mojo:cleanpom-maven-plugin</a></li>
+<li><a class="externalLink" href="http://site.trajano.net/m2e-codestyle-maven-plugin/m2e-codestyle-maven-plugin/">net.trajano.mojo:m2e-codestyle-maven-plugin</a></li>
+<li><a class="externalLink" href="http://site.trajano.net/coding-standards">net.trajano:coding-standards</a></li>
 <li><a class="externalLink" href="http://site.trajano.net/oss-aggregate/">net.trajano:oss-aggregate</a></li>
 <li><a class="externalLink" href="http://site.trajano.net/trajano-logo/trajano-logo/">net.trajano:trajano-logo</a></li>
 <li><a class="externalLink" href="http://site.trajano.net/trajano/">net.trajano:trajano</a></li></ol></td></tr></table></td></tr></table></div>
