--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -458,7 +458,7 @@
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>net.trajano.maven.doxia</td>
 <td>doxia-integration-tools</td>
-<td>2.0.0</td>
+<td>2.0.1-SNAPSHOT</td>
 <td></td>
 <td>jar</td>
 <td></td>
@@ -523,7 +523,7 @@
 <td>doxia-integration-tools</td></tr>
 <tr class="b">
 <th width="80%">Current Version</th>
-<td>2.0.0</td></tr>
+<td>2.0.1-SNAPSHOT</td></tr>
 <tr class="a">
 <th width="80%">Classifier</th>
 <td></td></tr>
@@ -655,11 +655,11 @@
       <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
-                                                                                                                                                                                                                                                                                                              <li class="collapsed">
-                          <a href="/project-info.html" title="Project Information">Project Information</a>
+                                                                                                                                                                                                                                                                                            <li class="collapsed">
+                          <a href="project-info.html" title="Project Information">Project Information</a>
                   </li>
                                                                                                 <li class="expanded">
-                          <a href="/project-reports.html" title="Project Reports">Project Reports</a>
+                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
                     <ul>
                       <li class="none">
                           <a href="dependency-updates-report.html" title="Dependency Updates Report">Dependency Updates Report</a>
