--- a/dependency-info.html
+++ b/dependency-info.html
@@ -136,8 +136,8 @@
       <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
-                                                                                                                                                                                                                                                                                                                        <li class="expanded">
-                          <a href="/project-info.html" title="Project Information">Project Information</a>
+                                                                                                                                                                                                                                                                                                      <li class="expanded">
+                          <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
                           <a href="index.html" title="About">About</a>
@@ -151,9 +151,6 @@
                       <li class="none">
             <strong>Dependency Information</strong>
           </li>
-                      <li class="none">
-                          <a href="dependency-convergence.html" title="Dependency Convergence">Dependency Convergence</a>
-            </li>
                       <li class="none">
                           <a href="source-repository.html" title="Source Repository">Source Repository</a>
             </li>
@@ -184,7 +181,7 @@
               </ul>
         </li>
                                                                                       <li class="collapsed">
-                          <a href="/project-reports.html" title="Project Reports">Project Reports</a>
+                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
                   </li>
           </ul>
         </aside>
