--- a/dependency-updates-report.html
+++ b/dependency-updates-report.html
@@ -190,11 +190,11 @@
       <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
-                                                                                                                                                                                                                                                                                                              <li class="collapsed">
-                          <a href="/project-info.html" title="Project Information">Project Information</a>
+                                                                                                                                                                                                                                                                                            <li class="collapsed">
+                          <a href="project-info.html" title="Project Information">Project Information</a>
                   </li>
                                                                                                 <li class="expanded">
-                          <a href="/project-reports.html" title="Project Reports">Project Reports</a>
+                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
                     <ul>
                       <li class="none">
             <strong>Dependency Updates Report</strong>
