--- a/integration.html
+++ b/integration.html
@@ -108,8 +108,8 @@
       <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
-                                                                                                                                                                                                                                                                                                                        <li class="expanded">
-                          <a href="/project-info.html" title="Project Information">Project Information</a>
+                                                                                                                                                                                                                                                                                                      <li class="expanded">
+                          <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
                           <a href="index.html" title="About">About</a>
@@ -122,9 +122,6 @@
             </li>
                       <li class="none">
                           <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
-            </li>
-                      <li class="none">
-                          <a href="dependency-convergence.html" title="Dependency Convergence">Dependency Convergence</a>
             </li>
                       <li class="none">
                           <a href="source-repository.html" title="Source Repository">Source Repository</a>
@@ -156,7 +153,7 @@
               </ul>
         </li>
                                                                                       <li class="collapsed">
-                          <a href="/project-reports.html" title="Project Reports">Project Reports</a>
+                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
                   </li>
           </ul>
         </aside>
