--- a/license.html
+++ b/license.html
@@ -336,8 +336,8 @@ rights to a jury trial in any resulting litigation.</p>
       <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
-                                                                                                                                                                                                                                                                                                                        <li class="expanded">
-                          <a href="/project-info.html" title="Project Information">Project Information</a>
+                                                                                                                                                                                                                                                                                                      <li class="expanded">
+                          <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
                           <a href="index.html" title="About">About</a>
@@ -350,9 +350,6 @@ rights to a jury trial in any resulting litigation.</p>
             </li>
                       <li class="none">
                           <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
-            </li>
-                      <li class="none">
-                          <a href="dependency-convergence.html" title="Dependency Convergence">Dependency Convergence</a>
             </li>
                       <li class="none">
                           <a href="source-repository.html" title="Source Repository">Source Repository</a>
@@ -384,7 +381,7 @@ rights to a jury trial in any resulting litigation.</p>
               </ul>
         </li>
                                                                                       <li class="collapsed">
-                          <a href="/project-reports.html" title="Project Reports">Project Reports</a>
+                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
                   </li>
           </ul>
         </aside>
