--- a/plugins.html
+++ b/plugins.html
@@ -74,7 +74,7 @@
 <th>Version</th></tr>
 <tr class="b">
 <td>net.trajano.mojo</td>
-<td><a class="externalLink" href="http://site.trajano.net/cleanpom-maven-plugin/cleanpom-maven-plugin/">cleanpom-maven-plugin</a></td>
+<td><a class="externalLink" href="http://site.trajano.net/trajano/cleanpom-maven-plugin/">cleanpom-maven-plugin</a></td>
 <td>1.0.2-SNAPSHOT</td></tr>
 <tr class="a">
 <td>org.apache.maven.plugins</td>
@@ -143,8 +143,8 @@
       <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
-                                                                                                                                                                                                                                                                                                                        <li class="expanded">
-                          <a href="/project-info.html" title="Project Information">Project Information</a>
+                                                                                                                                                                                                                                                                                                      <li class="expanded">
+                          <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
                           <a href="index.html" title="About">About</a>
@@ -157,9 +157,6 @@
             </li>
                       <li class="none">
                           <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
-            </li>
-                      <li class="none">
-                          <a href="dependency-convergence.html" title="Dependency Convergence">Dependency Convergence</a>
             </li>
                       <li class="none">
                           <a href="source-repository.html" title="Source Repository">Source Repository</a>
@@ -191,7 +188,7 @@
               </ul>
         </li>
                                                                                       <li class="collapsed">
-                          <a href="/project-reports.html" title="Project Reports">Project Reports</a>
+                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
                   </li>
           </ul>
         </aside>
