--- a/project-info.html
+++ b/project-info.html
@@ -87,33 +87,30 @@
 <td><a href="dependency-info.html">Dependency Information</a></td>
 <td>This document describes how to to include this project as a dependency using various dependency management tools.</td></tr>
 <tr class="b">
-<td><a href="dependency-convergence.html">Dependency Convergence</a></td>
-<td>This document presents the convergence of dependency versions across the entire project, and its sub modules.</td></tr>
-<tr class="a">
 <td><a href="source-repository.html">Source Repository</a></td>
 <td>This is a link to the online source repository that can be viewed via a web browser.</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a href="mail-lists.html">Mailing Lists</a></td>
 <td>This document provides subscription and archive information for this project's mailing lists.</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a href="issue-tracking.html">Issue Tracking</a></td>
 <td>This is a link to the issue management system for this project. Issues (bugs, features, change requests) can be created and queried using this link.</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a href="integration.html">Continuous Integration</a></td>
 <td>This is a link to the definitions of all continuous integration processes that builds and tests code on a frequent, regular basis.</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a href="plugins.html">Project Plugins</a></td>
 <td>This document lists the build plugins and the report plugins used by this project.</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a href="license.html">Project License</a></td>
 <td>This is a link to the definitions of project licenses.</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a href="team-list.html">Project Team</a></td>
 <td>This document provides information on the members of this project. These are the individuals who have contributed to the project in one form or another.</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a href="project-summary.html">Project Summary</a></td>
 <td>This document lists other related information of this project</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a href="dependencies.html">Dependencies</a></td>
 <td>This document lists the project's dependencies and provides information on each dependency.</td></tr></table></div></div>
 	      </div>
@@ -148,11 +145,52 @@
       <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
-                                                                                                                                                                                                                                                                                                              <li class="collapsed">
-                          <a href="/project-info.html" title="Project Information">Project Information</a>
-                  </li>
+                                                                                                                                                                                                                                                                                                <li class="expanded">
+            <strong>Project Information</strong>
+                  <ul>
+                      <li class="none">
+                          <a href="index.html" title="About">About</a>
+            </li>
+                      <li class="none">
+                          <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
+            </li>
+                      <li class="none">
+                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
+            </li>
+                      <li class="none">
+                          <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
+            </li>
+                      <li class="none">
+                          <a href="source-repository.html" title="Source Repository">Source Repository</a>
+            </li>
+                      <li class="none">
+                          <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
+            </li>
+                      <li class="none">
+                          <a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a>
+            </li>
+                      <li class="none">
+                          <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
+            </li>
+                      <li class="none">
+                          <a href="plugins.html" title="Project Plugins">Project Plugins</a>
+            </li>
+                      <li class="none">
+                          <a href="license.html" title="Project License">Project License</a>
+            </li>
+                      <li class="none">
+                          <a href="team-list.html" title="Project Team">Project Team</a>
+            </li>
+                      <li class="none">
+                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
+            </li>
+                      <li class="none">
+                          <a href="dependencies.html" title="Dependencies">Dependencies</a>
+            </li>
+              </ul>
+        </li>
                                                                                       <li class="collapsed">
-                          <a href="/project-reports.html" title="Project Reports">Project Reports</a>
+                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
                   </li>
           </ul>
         </aside>
