wagon-git commit

--- a/dependency-convergence.html
+++ b/dependency-convergence.html
@@ -135,7 +135,7 @@
 <td>
 <ol style="list-style-type: lower-alpha">
 <li><a class="externalLink" href="http://site.trajano.net/wagon-git">net.trajano.wagon:wagon-git</a></li>
-<li><a class="externalLink" href="http://site.trajano.net/">net.trajano:oss-aggregate</a></li>
+<li><a class="externalLink" href="http://site.trajano.net/oss-aggregate">net.trajano:oss-aggregate</a></li>
 <li><a class="externalLink" href="http://site.trajano.net/trajano/">net.trajano:trajano</a></li></ol></td></tr></table></td></tr></table></div>
 <div class="section">
 <h4>org.apache.commons:commons-lang3<a name="org.apache.commons:commons-lang3"></a></h4>
