wagon-git commit

--- a/source-repository.html
+++ b/source-repository.html
@@ -118,7 +118,7 @@
       <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
-                                                                                                                                                                                                                                                                                        <li class="expanded">
+                                                                                                                                                                                                                                                                                                          <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                           <li class="none">
@@ -126,6 +126,9 @@
             </li>
                           <li class="none">
                           <a href="dependencies.html" title="Dependencies">Dependencies</a>
+            </li>
+                          <li class="none">
+                          <a href="dependency-convergence.html" title="Dependency Convergence">Dependency Convergence</a>
             </li>
                           <li class="none">
                           <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
