--- a/license.html
+++ b/license.html
@@ -336,7 +336,7 @@ rights to a jury trial in any resulting litigation.</p>
       <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
-                                                                                                                                                                                                                                                                                        <li class="expanded">
+                                                                                                                                                                                                                                                                                                          <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                           <li class="none">
@@ -344,6 +344,9 @@ rights to a jury trial in any resulting litigation.</p>
             </li>
                           <li class="none">
                           <a href="dependencies.html" title="Dependencies">Dependencies</a>
+            </li>
+                          <li class="none">
+                          <a href="dependency-convergence.html" title="Dependency Convergence">Dependency Convergence</a>
             </li>
                           <li class="none">
                           <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
