--- a/team-list.html
+++ b/team-list.html
@@ -137,7 +137,7 @@ window.onLoad = init();
       <aside class="widget">
                  <h1 class="widget-title">Project Documentation</h1>
                   <ul>
-                                                                                                                                                                                                                                                                                        <li class="expanded">
+                                                                                                                                                                                                                                                                                                          <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                           <li class="none">
@@ -145,6 +145,9 @@ window.onLoad = init();
             </li>
                           <li class="none">
                           <a href="dependencies.html" title="Dependencies">Dependencies</a>
+            </li>
+                          <li class="none">
+                          <a href="dependency-convergence.html" title="Dependency Convergence">Dependency Convergence</a>
             </li>
                           <li class="none">
                           <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
