wagon-git commit

--- a/dependency-info.html
+++ b/dependency-info.html
@@ -73,37 +73,37 @@
 <pre>&lt;dependency&gt;
   &lt;groupId&gt;net.trajano&lt;/groupId&gt;
   &lt;artifactId&gt;trajano&lt;/artifactId&gt;
-  &lt;version&gt;9-SNAPSHOT&lt;/version&gt;
+  &lt;version&gt;9&lt;/version&gt;
   &lt;type&gt;pom&lt;/type&gt;
 &lt;/dependency&gt;</pre></div></div>
 <div class="section">
 <h3>Apache Buildr<a name="Apache_Buildr"></a></h3><a name="Apache_Buildr"></a>
 <div class="source">
-<pre>'net.trajano:trajano:pom:9-SNAPSHOT'</pre></div></div>
+<pre>'net.trajano:trajano:pom:9'</pre></div></div>
 <div class="section">
 <h3>Apache Ant<a name="Apache_Ant"></a></h3><a name="Apache_Ant"></a>
 <div class="source">
-<pre>&lt;dependency org=&quot;net.trajano&quot; name=&quot;trajano&quot; rev=&quot;9-SNAPSHOT&quot;&gt;
+<pre>&lt;dependency org=&quot;net.trajano&quot; name=&quot;trajano&quot; rev=&quot;9&quot;&gt;
   &lt;artifact name=&quot;trajano&quot; type=&quot;pom&quot; /&gt;
 &lt;/dependency&gt;</pre></div></div>
 <div class="section">
 <h3>Groovy Grape<a name="Groovy_Grape"></a></h3><a name="Groovy_Grape"></a>
 <div class="source">
 <pre>@Grapes(
-@Grab(group='net.trajano', module='trajano', version='9-SNAPSHOT')
+@Grab(group='net.trajano', module='trajano', version='9')
 )</pre></div></div>
 <div class="section">
 <h3>Grails<a name="Grails"></a></h3><a name="Grails"></a>
 <div class="source">
-<pre>compile 'net.trajano:trajano:9-SNAPSHOT'</pre></div></div>
+<pre>compile 'net.trajano:trajano:9'</pre></div></div>
 <div class="section">
 <h3>Leiningen<a name="Leiningen"></a></h3><a name="Leiningen"></a>
 <div class="source">
-<pre>[net.trajano/trajano &quot;9-SNAPSHOT&quot;]</pre></div></div>
+<pre>[net.trajano/trajano &quot;9&quot;]</pre></div></div>
 <div class="section">
 <h3>SBT<a name="SBT"></a></h3><a name="SBT"></a>
 <div class="source">
-<pre>libraryDependencies += &quot;net.trajano&quot; %% &quot;trajano&quot; % &quot;9-SNAPSHOT&quot;</pre></div></div></div>
+<pre>libraryDependencies += &quot;net.trajano&quot; %% &quot;trajano&quot; % &quot;9&quot;</pre></div></div></div>
 	      </div>
 	    </article>
 	  </div>
@@ -115,7 +115,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2014-07-11</span>
-                   <br /> <span id="projectVersion">Version: 9-SNAPSHOT</span>
+                   <br /> <span id="projectVersion">Version: 9</span>
                       </div>
       	</h2>
         <div id="primary-sidebar" class="primary-sidebar widget-area" role="complementary">
