--- a/project-reports.html
+++ b/project-reports.html
@@ -91,7 +91,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2014-07-11</span>
-                   <br /> <span id="projectVersion">Version: 9-SNAPSHOT</span>
+                   <br /> <span id="projectVersion">Version: 9</span>
                       </div>
       	</h2>
         <div id="primary-sidebar" class="primary-sidebar widget-area" role="complementary">
