--- a/team-list.html
+++ b/team-list.html
@@ -116,7 +116,7 @@ window.onLoad = init();
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2014-07-11</span>
-                   <br /> <span id="projectVersion">Version: 9-SNAPSHOT</span>
+                   <br /> <span id="projectVersion">Version: 9</span>
                       </div>
       	</h2>
         <div id="primary-sidebar" class="primary-sidebar widget-area" role="complementary">
