wagon-git commit

--- a/plugin-management.html
+++ b/plugin-management.html
@@ -75,7 +75,7 @@
 <tr class="b">
 <td>net.trajano.mojo</td>
 <td><a class="externalLink" href="http://site.trajano.net/trajano/cleanpom-maven-plugin/">cleanpom-maven-plugin</a></td>
-<td>1.0.3-SNAPSHOT</td></tr>
+<td>1.0.3</td></tr>
 <tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-antrun-plugin/">maven-antrun-plugin</a></td>
@@ -131,7 +131,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2014-07-11</span>
-                   <br /> <span id="projectVersion">Version: 10-SNAPSHOT</span>
+                   <br /> <span id="projectVersion">Version: 10</span>
                       </div>
       	</h2>
         <div id="primary-sidebar" class="primary-sidebar widget-area" role="complementary">
