--- a/project-summary.html
+++ b/project-summary.html
@@ -108,7 +108,7 @@
 <td>trajano</td></tr>
 <tr class="b">
 <td>Version</td>
-<td>10-SNAPSHOT</td></tr>
+<td>10</td></tr>
 <tr class="a">
 <td>Type</td>
 <td>pom</td></tr></table></div></div>
@@ -123,7 +123,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2014-07-11</span>
-                   <br /> <span id="projectVersion">Version: 10-SNAPSHOT</span>
+                   <br /> <span id="projectVersion">Version: 10</span>
                       </div>
       	</h2>
         <div id="primary-sidebar" class="primary-sidebar widget-area" role="complementary">
