prepare for switching cifs

--- a/intranet/intranet/index.html
+++ b/intranet/intranet/index.html
@@ -1,1 +1,5 @@
-Hello
+<a href="/swarm/">Swarm</a>
+<a href="/grafana/">Grafana</a>
+<a href="/portainer/">Portainer</a>
+<a href="/jenkins/">Jenkins</a>
+<a href="/nexus/">Nexus</a>
